# tinygrad_projects

./: .env  README.md  pyproject.toml
mnist/: main.py
