[project]
name = "tinygrad-projects"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Huvinesh Rajendran", email = "huvinesh@teleme.co" }]
dependencies = [
    "tinygrad>=0.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tinygrad_projects"]

[tool.pyright]
venvPath = "."
venv = ".venv"
